fix: Apply z-index levels (#2673)

--- a/app/style/common/variables.less
+++ b/app/style/common/variables.less
@@ -201,8 +201,11 @@
 @z-index-level-6: 1000000;
 @z-index-level-7: 10000000;
 
+@z-index-badge: @z-index-level-2;
+@z-index-panel: @z-index-level-3;
 @z-index-bubble: @z-index-level-3;
 @z-index-modal: @z-index-level-4;
+@z-index-context: @z-index-level-7;
 @z-index-warnings: @z-index-level-7;
 
 // ----------------------------------------------------------------------------
