--- a/app/style/framework.less
+++ b/app/style/framework.less
@@ -60,7 +60,7 @@
     background-color: #fff;
     transform: scale(1, 1);
     overflow: hidden;
-    z-index: 10000;
+    z-index: @z-index-panel;
     width: 0;
     height: 100vh;
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.08);
